SYS-539 refactor initialize and testbase
